hphp/hack/test/typecheck/constructor_method_call_complex.php
<?hh // strict

class A {
  public function foo(): void {
  }
}

function main(?A $a): void {
  $a ?? new A() ?->foo();
}
